--- a/index.html
+++ b/index.html
@@ -2,48 +2,17 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>OI ROV Technical Documentation 2025 | MEGALODON Vehicle</title>
+    <title>Redirecting to OI ROV Technical Report...</title>
     
-    <meta name="description" content="Technical report for OI ROV's MEGALODON vehicle. MATE ROV Competition 2025. Features: Artelon frame, ESP32 control, T200 thrusters. Obour Higher Institute.">
-    <meta name="keywords" content="OI ROV, MEGALODON, MATE ROV 2025, Obour Institute, Underwater Robotics, ESP32, ROV Design">
-    <meta name="author" content="OI ROV Team">
+    <meta http-equiv="refresh" content="0; url=OI-ROV-Megalodon-Technical-Report-2025.pdf">
+    
+    <link rel="canonical" href="OI-ROV-Megalodon-Technical-Report-2025.pdf">
 
-    <script type="application/ld+json">
-    {
-      "@context": "https://schema.org",
-      "@type": "TechnicalArticle",
-      "headline": "OI ROV Technical Documentation 2025 - MEGALODON",
-      "author": {"@type": "Organization", "name": "OI ROV Team - Obour Higher Institute"},
-      "datePublished": "2025-01-01",
-      "description": "Technical documentation for the MEGALODON ROV, covering mechanical design, electrical ESP32 systems, and software architecture.",
-      "articleBody": "Complete technical report for the MATE ROV 2025 competition."
-    }
+    <script type="text/javascript">
+        window.location.href = "OI-ROV-Megalodon-Technical-Report-2025.pdf";
     </script>
-
-    <style>
-        body { font-family: sans-serif; text-align: center; padding: 50px; background: #f4f4f9; }
-        .container { background: white; max-width: 700px; margin: auto; padding: 40px; border-radius: 10px; box-shadow: 0 5px 15px rgba(0,0,0,0.1); }
-        h1 { color: #0056b3; }
-        p { color: #555; line-height: 1.6; }
-        .btn { display: inline-block; background: #0056b3; color: white; padding: 15px 30px; text-decoration: none; border-radius: 5px; font-weight: bold; margin-top: 20px; font-size: 18px; }
-        .btn:hover { background: #003d80; }
-    </style>
 </head>
 <body>
-
-<div class="container">
-    <h1>OI ROV: MEGALODON Technical Report 2025</h1>
-    <p><strong>Team:</strong> OI ROV (Obour Higher Institute)</p>
-    <p>
-        This page hosts the official technical documentation for the <strong>MEGALODON</strong> ROV. 
-        The report details the transition to <strong>ESP32</strong> architecture, the new <strong>Stainless Steel</strong> enclosure, and the 6-thruster configuration using <strong>Blue Robotics T200</strong>.
-    </p>
-
-    <a href="OI-ROV-Megalodon-Technical-Report-2025.pdf" class="btn" target="_blank">
-        📥 Download Full PDF Report
-    </a>
-</div>
-
+    <p>If you are not redirected automatically, <a href="OI-ROV-Megalodon-Technical-Report-2025.pdf">click here to view the PDF</a>.</p>
 </body>
 </html>
