--- a/index.html
+++ b/index.html
@@ -11,8 +11,11 @@
     <script type="text/javascript">
         window.location.href = "OI-ROV-Megalodon-Technical-Report-2025.pdf";
     </script>
+    <meta name="google-site-verification" content="rms17xPK0jJyOa5aGEagQbn76-rG0LoMEC4Rh79tnY4" />
 </head>
 <body>
     <p>If you are not redirected automatically, <a href="OI-ROV-Megalodon-Technical-Report-2025.pdf">click here to view the PDF</a>.</p>
 </body>
 </html>
+
+<meta name="google-site-verification" content="rms17xPK0jJyOa5aGEagQbn76-rG0LoMEC4Rh79tnY4" />
