--- a/index.html
+++ b/index.html
@@ -2,8 +2,20 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Redirecting to OI ROV Technical Report...</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     
+    <meta name="google-site-verification" content="rms17xPK0jJyOa5aGEagQbn76-rG0LoMEC4Rh79tnY4" />
+
+    <title>OI ROV Technical Documentation 2025 | MEGALODON Vehicle</title>
+
+    <meta name="description" content="Technical report for OI ROV's MEGALODON vehicle (Obour Higher Institute). Features ESP32 control system, 6-DOF T200 thrusters, and Artelon frame for MATE ROV 2025 Competition.">
+    <meta name="keywords" content="OI ROV, MEGALODON, MATE ROV 2025, Obour Higher Institute, Underwater Robotics, ESP32, T200 Thrusters, ROV Design, Technical Documentation">
+    <meta name="author" content="OI ROV Team - Obour Higher Institute">
+
+    <meta property="og:title" content="OI ROV Technical Documentation 2025 - MEGALODON">
+    <meta property="og:description" content="Official technical report for the MEGALODON ROV. Details on mechanical design, ESP32 electronics, and software architecture.">
+    <meta property="og:type" content="article">
+
     <meta http-equiv="refresh" content="0; url=OI-ROV-Megalodon-Technical-Report-2025.pdf">
     
     <link rel="canonical" href="OI-ROV-Megalodon-Technical-Report-2025.pdf">
@@ -11,12 +23,14 @@
     <script type="text/javascript">
         window.location.href = "OI-ROV-Megalodon-Technical-Report-2025.pdf";
     </script>
-    <meta name="google-site-verification" content="rms17xPK0jJyOa5aGEagQbn76-rG0LoMEC4Rh79tnY4" />
 </head>
 <body>
-    <p>If you are not redirected automatically, <a href="OI-ROV-Megalodon-Technical-Report-2025.pdf">click here to view the PDF</a>.</p>
-    <meta name="google-site-verification" content="rms17xPK0jJyOa5aGEagQbn76-rG0LoMEC4Rh79tnY4" />
+    <div style="text-align: center; padding-top: 50px; font-family: sans-serif;">
+        <h2>Redirecting to OI ROV Technical Report...</h2>
+        <p>
+            If the PDF does not open automatically, 
+            <a href="OI-ROV-Megalodon-Technical-Report-2025.pdf" style="color: blue; text-decoration: underline;">click here to download</a>.
+        </p>
+    </div>
 </body>
 </html>
-
-
